Header and spacing related fixes

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -18,3 +18,10 @@ a {
 a:hover {
 	text-decoration: underline;
 }
+
+a.anchor {
+	display: block;
+	position: relative;
+	top: -6rem;
+	visibility: hidden;
+}
