--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -60,11 +60,12 @@
 		}
 
 		&#cosaFacciamo, &#social{
-			.row{
-				h3{
-					display: inline-block;
-					font-weight: 500;
-					line-height: 1.3rem;
+			.row {
+				h3 {
+					text-shadow: 0 1px 2px rgba(0,0,0,0.1);
+					display: block;
+					font-size: 2.25rem;
+					font-weight: normal;
 					color: $main-color;
 				}
 
